@@ -721,6 +721,8 @@
 (test -5.0 quotient 36.0 -7)
 (test -5.0 quotient 36.0 -7+0.0i)
 (test -5.0 quotient 36.0+0.0i -7)
+(test 0 quotient 0 5.0)
+(test 0 quotient 0 -5.0)
 (test 1 modulo 13 4)
 (test 1 remainder 13 4)
 (test 1.0 modulo 13 4.0)
@@ -761,6 +763,10 @@
 (test 0.0 remainder -4.0 2)
 (test 0.0 remainder 4.0 -2)
 (test 0.0 remainder -4.0 -2)
+(test 0 modulo 0 5.0)
+(test 0 modulo 0 -5.0)
+(test 0 remainder 0 5.0)
+(test 0 remainder 0 -5.0)
 (define (divtest n1 n2)
 	(= n1 (+ (* n2 (quotient n1 n2))
 		 (remainder n1 n2))))
